<resources>
    <string name="app_name">homework9</string>
    <!--Navigation-->
    <string name="buttonNavigationCatalogGoods">Catalog of goods</string>
    <string name="buttonNavigationUserProfile">User Profile</string>
    <string name="buttonNavigationNotes">Notes</string>
    <string name="buttonNavigationMovies">Movies</string>
    <string name="buttonNavigationCalendarEvents">Calendar of events</string>
    <string name="buttonNavigationCatalogBooks">Catalog of books</string>
    <string name="textViewTitleNavigation">Navigation</string>
    <!--Catalog of good-->
    <string name="phone_description">Samsung Galaxy A34 6/128GB Light Green (SM-A346ELGASEK)</string>
    <string name="laptop_description">Apple MacBook Air 13" M1 8/256GB 2020 (MGN63) Space Gray</string>
    <string name="headphone_description">Bluetooth BASEUS Encok Wireless headphone D02 Pro BT5.0, AUX Black (NGD02-C01)</string>
    <string name="product_image">Product image</string>
    <!--User profile-->
    <string name="outlinedTextFieldNameHint">Name</string>
    <string name="outlinedTextFieldSurnameHint">Surname</string>
    <string name="outlinedTextFieldEmailHint">Email</string>
    <string name="buttonLoginProfile">Login</string>
    <!--Movies-->
    <string name="descriptionButtonBack">Back button</string>
    <!--Calendar of events-->
    <string name="outlinedTextFieldEnterData">Data</string>
    <string name="outlinedTextFieldEnterTime">Time</string>
    <string name="outlinedTextFieldEnterDescriptionEvent">Description</string>
    <string name="buttonCreateEvent">Create</string>
    <string name="buttonApprove">Approve</string>
    <!--Notes-->
    <string name="outlinedTextFieldNotesHint">Add note</string>


</resources>