<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/textViewTitleNavigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:text="@string/textViewTitleNavigation"/>
    <Button
        android:id="@+id/buttonNavigationCatalogGoods"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonNavigationCatalogGoods"/>
    <Button
        android:id="@+id/buttonNavigationUserProfile"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonNavigationUserProfile"/>
    <Button
        android:id="@+id/buttonNavigationCatalogBooks"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonNavigationCatalogBooks"/>
    <Button
        android:id="@+id/buttonNavigationMovies"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonNavigationMovies"/>
    <Button
        android:id="@+id/buttonNavigationCalendarEvents"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonNavigationCalendarEvents"/>
    <Button
        android:id="@+id/buttonNavigationNotes"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonNavigationNotes"/>

</LinearLayout>
