<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".catalogGoods.CatalogGoodsActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ImageButton
        android:id="@+id/imageButtonPhone"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/phone"
        android:scaleType="fitCenter"
        android:background="@color/white"
        android:contentDescription="@string/phone_description"/>
    <Space
        android:layout_width="0dp"
        android:layout_height="16dp" />

    <ImageButton
        android:id="@+id/imageButtonLaptop"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/laptop"
        android:scaleType="fitCenter"
        android:background="@color/white"
        android:contentDescription="@string/laptop_description"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="16dp"/>

    <ImageButton
        android:id="@+id/imageButtonHeadPhone"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:background="@color/white"
        android:src="@drawable/headphone"
        android:contentDescription="@string/headphone_description"/>

</LinearLayout>