<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userProfile.EnterInfoProfileActivity">

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:flow_maxElementsWrap="1"
        app:flow_wrapMode="chain"
        app:flow_verticalGap="4dp"
        app:constraint_referenced_ids="outlinedTextFieldName,outlinedTextFieldSurname,outlinedTextFieldEmail,buttonLoginProfile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldName"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:hint="@string/outlinedTextFieldNameHint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldSurname"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:hint="@string/outlinedTextFieldSurnameHint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldEmail"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:hint="@string/outlinedTextFieldEmailHint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLoginProfile"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonLoginProfile"/>
  </androidx.constraintlayout.widget.ConstraintLayout>